header and footer
added header and footer contents

--- a/working folder/index.html
+++ b/working folder/index.html
@@ -4,5 +4,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music website</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header>
+      <h1>Music site</h1>
+      <nav>
+        <ul>
+          <li><a href="#featured">Featured Artists</a></li>
+          <li><a href="#genres">Genres</a></li>
+          <li><a href="#instruments">Instruments</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- footer -->
+    <footer>
+      <p>&copy; 2024 Music Website. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
