--- a/working folder/index.html
+++ b/working folder/index.html
@@ -17,6 +17,22 @@
       </nav>
     </header>
 
+    <!-- Featured artist section -->
+    <section id="featured">
+      <h2>Featured Artists</h2>
+      <article>
+        <h3>Artist 1</h3>
+        <p>Description 1</p>
+      </article>
+      <article>
+        <h3>Artist 2</h3>
+        <p>Description 2</p>
+      </article>
+      <article>
+        <h3>Artist 3</h3>
+        <p>Description 3</p>
+      </article>
+    </section>
     <!-- footer -->
     <footer>
       <p>&copy; 2024 Music Website. All rights reserved.</p>
