--- a/working folder/index.html
+++ b/working folder/index.html
@@ -27,27 +27,27 @@
     <h2 class="text">Featured Artists</h2>
     <section id="featured">
       <article class="card">
-        <img class="card-image" src="/photos/Eminem.jpeg" alt="Eminem" />
+        <img class="card-image" src="photos/Eminem.jpeg" alt="Eminem" />
         <h3 class="text">Eminem</h3>
         <p class="text">Hip-hop</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/taylor.jpeg" alt="Taylor Swift" />
+        <img class="card-image" src="photos/taylor.jpeg" alt="Taylor Swift" />
         <h3 class="text">Taylor Swift</h3>
         <p class="text">Pop, country, folk, rock</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/beyoncé.png" alt="beyoncé" />
+        <img class="card-image" src="photos/beyoncé.png" alt="beyoncé" />
         <h3 class="text">Beyoncé</h3>
         <p class="text">R&B, Pop, Hip-hop</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/jayz.png" alt="Jay-Z" />
+        <img class="card-image" src="photos/jayz.png" alt="Jay-Z" />
         <h3 class="text">Jay-Z</h3>
         <p class="text">East Coast hip-hop</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/ed.jpeg" alt="Ed Sheeran" />
+        <img class="card-image" src="photos/ed.jpeg" alt="Ed Sheeran" />
         <h3 class="text">Ed Sheeran</h3>
         <p class="text">Pop, Folk-pop, Soft rock</p>
       </article>
@@ -60,29 +60,25 @@
       <article class="card">
         <img
           class="card-image"
-          src="/photos/classic.jpeg"
+          src="photos/classic.jpeg"
           alt="classical Music"
         />
         <h3 class="text">Classical Music</h3>
       </article>
       <article class="card">
-        <img
-          class="card-image"
-          src="/photos/country.avif"
-          alt="Country Music"
-        />
+        <img class="card-image" src="photos/country.avif" alt="Country Music" />
         <h3 class="text">Country Music</h3>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/hip hop.jpeg" alt="Hip Hop" />
+        <img class="card-image" src="photos/hip hop.jpeg" alt="Hip Hop" />
         <h3 class="text">Hip Hop</h3>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/pop.jpeg" alt="Pop" />
+        <img class="card-image" src="photos/pop.jpeg" alt="Pop" />
         <h3 class="text">Pop Music</h3>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/jazz.png" alt="Jazz" />
+        <img class="card-image" src="photos/jazz.png" alt="Jazz" />
         <h3 class="text">Jazz</h3>
       </article>
     </section>
@@ -90,28 +86,28 @@
     <h2 class="text">Instruments</h2>
     <section id="instruments">
       <article class="card">
-        <img class="card-image" src="/photos/piano.jpeg" alt="Piano" />
+        <img class="card-image" src="photos/piano.jpeg" alt="Piano" />
         <h3 class="text">Piano</h3>
         <p class="text">Classic</p>
         <!-- Include images or videos demonstrating Instrument 1 -->
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/violin.jpeg" alt="Violin" />
+        <img class="card-image" src="photos/violin.jpeg" alt="Violin" />
         <h3 class="text">Violin</h3>
         <p class="text">Classic</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/drums.webp" alt="Drums" />
+        <img class="card-image" src="photos/drums.webp" alt="Drums" />
         <h3 class="text">Drums</h3>
         <p class="text">Rock</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/guitar.webp" alt="Guitar" />
+        <img class="card-image" src="photos/guitar.webp" alt="Guitar" />
         <h3 class="text">Guitar</h3>
         <p class="text">R&B</p>
       </article>
       <article class="card">
-        <img class="card-image" src="/photos/saxophone.webp" alt="Saxophone" />
+        <img class="card-image" src="photos/saxophone.webp" alt="Saxophone" />
         <h3 class="text">Saxophone</h3>
         <p class="text">Jazz</p>
       </article>
@@ -121,19 +117,19 @@
     <section class="audio" id="releases">
       <div class="audio">
         <audio controls>
-          <source src="/audios/audio1.mp3" type="audio/mp3" />
+          <source src="audios/audio1.mp3" type="audio/mp3" />
           Your browser does not support the audio element.
         </audio>
       </div>
       <div class="audio">
         <audio controls>
-          <source src="/audios/audio2.mp3" type="audio/mp3" />
+          <source src="audios/audio2.mp3" type="audio/mp3" />
           Your browser does not support the audio element.
         </audio>
       </div>
       <div class="audio">
         <audio controls>
-          <source src="/audios/drums.mp3" type="audio/mp3" />
+          <source src="audios/drums.mp3" type="audio/mp3" />
           Your browser does not support the audio element.
         </audio>
       </div>
@@ -144,7 +140,7 @@
       <article class="card-event">
         <img
           class="card-image"
-          src="/photos/Pink-Summer-2024.webp"
+          src="photos/Pink-Summer-2024.webp"
           alt="Summer Carnival 2024"
         />
         <h3 class="text">P!nk</h3>
@@ -155,7 +151,7 @@
       <article class="card-event">
         <img
           class="card-image"
-          src="/photos/taylor event.avif"
+          src="photos/taylor event.avif"
           alt="The Eras Tour"
         />
         <h3 class="text">Taylor Swift</h3>
