--- a/working folder/index.html
+++ b/working folder/index.html
@@ -116,18 +116,21 @@
     <h2 class="text">New Releases</h2>
     <section class="audio" id="releases">
       <div class="audio">
+        <h3>Instrument 1</h3>
         <audio controls>
           <source src="audios/audio1.mp3" type="audio/mp3" />
           Your browser does not support the audio element.
         </audio>
       </div>
       <div class="audio">
+        <h3>Instrument 2</h3>
         <audio controls>
           <source src="audios/audio2.mp3" type="audio/mp3" />
           Your browser does not support the audio element.
         </audio>
       </div>
       <div class="audio">
+        <h3>Instrument 3</h3>
         <audio controls>
           <source src="audios/drums.mp3" type="audio/mp3" />
           Your browser does not support the audio element.
